# fins-rust

./: Cargo.toml  README.md  tcpfins.c++
fins/: Cargo.toml
fins/src/: error.rs  header.rs  information_control_field.rs  lib.rs  machine_address.rs  memory_address.rs  memory_area_code.rs  memory_area_read_request.rs  memory_area_read_response.rs  protocol_violation.rs
fins_client/: Cargo.toml
fins_client/src/: main.rs  util.rs
fins_tcp/: Cargo.toml
fins_tcp/src/: client_address_frame.rs  command_code.rs  error.rs  header.rs  lib.rs  protocol_violation.rs  server_address_frame.rs
fins_util/: Cargo.toml
fins_util/src/: lib.rs  num.rs  raw.rs
src/: fins.rs  main.rs  raw.rs  tcpfins.c++  util.rs
